# projeto-duckdb

./: README.md  app.py  pyproject.toml
