[tool.poetry]
name = "projeto-duckdb"
version = "0.1.0"
description = ""
authors = ["Pedro Ivo <ivopedrobr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
